# gradient2d

./: Cargo.toml
docs/: index.html  rorschach.js  rorschach.wasm  sw.js
src/: app.rs  lib.rs  main.rs
